--- a/po/fr.po
+++ b/po/fr.po
@@ -1,104 +1,75 @@
-# SOME DESCRIPTIVE TITLE
-# Copyright (C) YEAR Free Software Foundation, Inc.
+# Copyright (C) 2013 Free Software Foundation, Inc.
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
 #
+# Didier Raboud <odyx@debian.org>, 2013.
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2013-01-10 08:53+0100\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"Project-Id-Version: \n"
+"POT-Creation-Date: 2013-01-11 12:48+0100\n"
+"PO-Revision-Date: 2013-01-11 12:40+0100\n"
+"Last-Translator: Didier Raboud <odyx@debian.org>\n"
+"Language-Team: French <>\n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"X-Generator: Lokalize 1.4\n"
 
-#
-#. type: Content of: <scene100><Title_text>
-#: scene100.xml:2
+#. type: One-char language identifier
+#: charLangID
 #, no-wrap
-msgid "scene100:Leaving Earth"
-msgstr "scene100:Départ de la Terre"
+msgid "E"
+msgstr "F"
 
-#
-#. type: Content of: <scene100><Title_resume>
-#: scene100.xml:3
+#. type: Title-text
+#: levels/scene100.txt:1
 #, no-wrap
-msgid "scene100:Earth"
-msgstr "scene100:Terre"
+msgid "Leaving Earth"
+msgstr "Départ de la Terre"
 
-#
-#. type: Content of: <scene100><ScriptName_resume>
-#: scene100.xml:4 scene100.xml:5 scene100.xml:6 scene100.xml:7
+#. type: Title-resume
+#: levels/scene100.txt:1
 #, no-wrap
-msgid "scene100:"
-msgstr "scene100:"
+msgid "Earth"
+msgstr "Terre"
 
-#
-#. type: Content of: <scene101><Title_text>
-#: scene101.xml:2
+#. type: Title-text
+#: levels/scene101.txt:1
 #, no-wrap
-msgid "scene101:Equipment"
-msgstr "scene101:Equipement"
+msgid "Equipment"
+msgstr "Équipement"
 
-#
-#. type: Content of: <scene101><ScriptName_resume>
-#: scene101.xml:3 scene101.xml:5 scene101.xml:6 scene101.xml:7
+#. type: Resume-text
+#: levels/scene101.txt:2
 #, no-wrap
-msgid "scene101:"
-msgstr "scene101:"
+msgid "Prepare yourself to embark on mankind's most thrilling adventure yet."
+msgstr "Équipez-vous pour affronter la grande aventure."
 
-#
-#. type: Content of: <scene101><Resume_text>
-#: scene101.xml:4
+#. type: Title-text
+#: levels/scene102.txt:1
 #, no-wrap
-msgid "scene101:Prepare yourself to embark on mankind's most thrilling adventure yet."
-msgstr "scene101:Equipez-vous pour affronter la grande aventure."
+msgid "Building"
+msgstr "Construction"
 
-#
-#. type: Content of: <scene102><Title_text>
-#: scene102.xml:2
+#. type: Resume-text
+#: levels/scene102.txt:2
 #, no-wrap
-msgid "scene102:Building"
-msgstr "scene102:Construction"
+msgid "Learn how to construct buildings."
+msgstr "Familiarisez-vous avec le matériel."
 
-#
-#. type: Content of: <scene102><ScriptName_resume>
-#: scene102.xml:3 scene102.xml:5 scene102.xml:6 scene102.xml:7
+#. type: Title-text
+#: levels/scene103.txt:1
 #, no-wrap
-msgid "scene102:"
-msgstr "scene102:"
+msgid "Departure"
+msgstr "Le grand départ"
 
-#
-#. type: Content of: <scene102><Resume_text>
-#: scene102.xml:4
+#. type: Resume-text
+#: levels/scene103.txt:2
 #, no-wrap
-msgid "scene102:Learn how to construct buildings."
-msgstr "scene102:Familiarisez-vous avec le matériel."
-
-#
-#. type: Content of: <scene103><Title_text>
-#: scene103.xml:2
-#, no-wrap
-msgid "scene103:Departure"
-msgstr "scene103:Le grand départ"
-
-#
-#. type: Content of: <scene103><ScriptName_resume>
-#: scene103.xml:3 scene103.xml:5 scene103.xml:6 scene103.xml:7
-#, no-wrap
-msgid "scene103:"
-msgstr "scene103:"
-
-#
-#. type: Content of: <scene103><Resume_text>
-#: scene103.xml:4
-#, no-wrap
-msgid "scene103:Equip your spaceship and get ready for takeoff."
-msgstr "scene103:Equipez votre vaisseau spatial en vue du grand départ vers l'aventure."
+msgid "Equip your spaceship and get ready for takeoff."
+msgstr "Équipez votre vaisseau spatial en vue du grand départ vers l'aventure."
 
 #. type: Plain text
 #: help/mhterre1.txt:3
